tests/ui/traits/trivial-unsized-projection.bad_new.stderr
error[E0277]: the size for values of type `[()]` cannot be known at compilation time
  --> $DIR/trivial-unsized-projection.rs:20:12
   |
LL | const FOO: <[()] as Bad>::Assert = todo!();
   |            ^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[()]`

error[E0277]: the size for values of type `[()]` cannot be known at compilation time
  --> $DIR/trivial-unsized-projection.rs:20:12
   |
LL | const FOO: <[()] as Bad>::Assert = todo!();
   |            ^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[()]`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
